[gd_scene load_steps=10 format=3 uid="uid://da05dt7owp230"]

[ext_resource type="Shader" path="res://assets/shaders/blur_01.gdshader" id="1_0gkln"]
[ext_resource type="Script" path="res://scripts/target_priority_menu.gd" id="1_m07qh"]
[ext_resource type="ButtonGroup" uid="uid://bd8bb8ix04jij" path="res://assets/btn_groups/target_priority_button_group.tres" id="1_tjign"]
[ext_resource type="FontFile" uid="uid://carhdkdeua43w" path="res://assets/Redkost Comic.otf" id="3_iulad"]
[ext_resource type="Texture2D" uid="uid://4007bn4htv0t" path="res://assets/HPbar_01.png" id="5_i8ww2"]
[ext_resource type="Texture2D" uid="uid://c54m55r4sxa0i" path="res://assets/HPbar_frame.png" id="6_dm0pa"]
[ext_resource type="LabelSettings" uid="uid://nis6xtmkq4lw" path="res://assets/themes/btn_lbl_settings.tres" id="7_q2eg4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dw8xl"]
shader = ExtResource("1_0gkln")
shader_parameter/blur_amount = 1.0
shader_parameter/mix_amount = null
shader_parameter/color_over = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvolc"]
bg_color = Color(0.964706, 0.862745, 0.321569, 0.898039)
border_width_top = 2
border_color = Color(0.964706, 0.862745, 0.321569, 0.898039)
border_blend = true

[node name="TargetPriorityMenu" type="Control"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -72.0
offset_right = 72.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m07qh")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_dw8xl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxFlat_xvolc")

[node name="NearestToBase" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(0.364706, 0.180392, 0.0470588, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = ExtResource("1_tjign")
texture_normal = ExtResource("5_i8ww2")
texture_hover = ExtResource("6_dm0pa")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/NearestToBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Nearest to base"
label_settings = ExtResource("7_q2eg4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeastHP" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(0.364706, 0.180392, 0.0470588, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("1_tjign")
texture_normal = ExtResource("5_i8ww2")
texture_hover = ExtResource("6_dm0pa")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/LeastHP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Least HP"
label_settings = ExtResource("7_q2eg4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Random" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(0.364706, 0.180392, 0.0470588, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("1_tjign")
texture_normal = ExtResource("5_i8ww2")
texture_hover = ExtResource("6_dm0pa")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Random"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Random Target"
label_settings = ExtResource("7_q2eg4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boss" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color(0.364706, 0.180392, 0.0470588, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("1_tjign")
texture_normal = ExtResource("5_i8ww2")
texture_hover = ExtResource("6_dm0pa")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Boss"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Boss"
label_settings = ExtResource("7_q2eg4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxFlat_xvolc")

[node name="OK" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("3_iulad")
theme_override_font_sizes/font_size = 18
text = "OK"

[connection signal="toggled" from="VBoxContainer/NearestToBase" to="." method="_on_nearest_to_base_toggled"]
[connection signal="toggled" from="VBoxContainer/LeastHP" to="." method="_on_least_hp_toggled"]
[connection signal="toggled" from="VBoxContainer/Random" to="." method="_on_random_toggled"]
[connection signal="toggled" from="VBoxContainer/Boss" to="." method="_on_boss_toggled"]
[connection signal="pressed" from="VBoxContainer/OK" to="." method="_on_ok_pressed"]
